# plasma_emulator

./: .clang-format  .gitignore  CMakeLists.txt  CMakePresets.json  LICENSE  README.md  vcpkg.json
.github/workflows/: checkin_cicd.yml
app/: CMakeLists.txt
app/src/: main.cpp
cmake/: copy_header_files.cmake
include/: equation.hpp  partical.hpp  physic_constant.hpp
scripts/: format_all_file.py  run_ctest.py
src/: equation.cpp  partical.cpp
submod/: CMakeLists.txt
submod/chempars/: CMakeLists.txt
submod/chempars/include/: equation.hpp  partical.hpp
submod/chempars/src/: equation.cpp  partical.cpp
submod/chempars/test/: CMakeLists.txt  test_equation.cpp  test_partical.cpp
submod/common/: CMakeLists.txt
submod/common/include/: log.hpp  matrix.hpp  timer.hpp  type_limits.hpp  utils.hpp
submod/common/src/: log.cpp  timer.cpp  utils.cpp
submod/common/test/: CMakeLists.txt  test_log.cpp  test_type_limits.cpp  test_utils.cpp
submod/core/: CMakeLists.txt
submod/core/include/: config.hpp  matrix.hpp  matrix_helper.hpp  physic_constant.hpp  units_extend.hpp
submod/core/src/: matrix_helper.cpp
submod/core/test/: CMakeLists.txt  test_matrix_helper.cpp  test_odeint.cpp  test_solver.cpp  test_units.cpp
submod/gds_math/: CMakeLists.txt
submod/gds_math/benchmark/: CMakeLists.txt  benchmark_odeint.cpp
submod/gds_math/include/: odeint.hpp
submod/gds_math/src/: odeint.cpp
submod/gds_math/test/: CMakeLists.txt  test.cpp
submod/parallel/: CMakeLists.txt
submod/parallel/benchmark/: CMakeLists.txt  benchmark_odeint.cpp
submod/parallel/include/: odeint.hpp
submod/parallel/src/: odeint.cpp  odeint.cu  test.cu
submod/parallel/test/: CMakeLists.txt  test.cpp
test/: CMakeLists.txt  test_equation.cpp  test_partical.cpp  test_units.cpp
