find_package(fmt CONFIG REQUIRED)
find_package(units CONFIG REQUIRED)
file(GLOB_RECURSE SOURCES "src/*.cpp" "src/*.c")
add_library(chempars ${SOURCES})
target_include_directories(chempars PUBLIC include)
target_link_libraries(chempars PUBLIC fmt::fmt units::units)
if(BUILD_TESTS)
    add_subdirectory(test)
endif()