find_package(fmt CONFIG REQUIRED)
file(GLOB_RECURSE SOURCES "src/*.cpp" "src/*.c")
add_library(common ${SOURCES})
target_include_directories(common PUBLIC include)
target_link_libraries(common PRIVATE fmt::fmt core)
if(PLASMA_DEBUG)
    target_compile_definitions(common PUBLIC PLASMA_DEBUG)
endif()
if(BUILD_TESTS)
    add_subdirectory(test)
endif()